Preventing actions menu cutoff, correcting fix for bottom cutoff

--- a/admin/assets/less/admin/legacy.less
+++ b/admin/assets/less/admin/legacy.less
@@ -54,9 +54,6 @@
 #carch #mura-content #gridContainer ul.breadcrumb{
   float: left;
 }
-#tabArchitectural .block-header + .block-content{ 
-  overflow: visible; 
-}
 #tabArchitectural #gridContainer dl {
   width: 100%;
   float: none;
